Fixed icon spacing issue when track is playing

--- a/src/index.scss
+++ b/src/index.scss
@@ -919,8 +919,8 @@ hr {
 }
 
 .current-track-player {
+  bottom: 55px;
   position: absolute;
-  bottom: 45px;
   width: 340px;
   text-align: left;
   padding: 10px;
